# reponest

./: .editorconfig  .envrc.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  flake.nix  rustfmt.toml  typos.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: git_ops_bench.rs  scanner_bench.rs
docs/: DEVELOPMENT_WORKFLOW.md
examples/: config.toml  shell_wrapper.sh
scripts/: cleanup-test-repos.sh  setup-test-repos.sh
src/: main.rs
src/cli/: args.rs  executor.rs  mod.rs
src/cli/commands/: list.rs  mod.rs
src/config/: app_config.rs  keybindings.rs  mod.rs  theme.rs
src/core/: git_ops.rs  mod.rs  repo_info.rs  scanner.rs  worker.rs
src/tui/: app.rs  input.rs  mod.rs  state.rs  task.rs
src/tui/ui/: keyhint_bar.rs  layout.rs  mod.rs  render.rs  repo_detail.rs  repo_list.rs
