[package]
name = "reponest"
version = "0.1.0"
edition = "2024"
authors = ["Pei Haoxiang <peoxin@outlook.com>"]
description = "A TUI/CLI tool for managing multiple git repositories written in Rust."
license = "MIT"
repository = "https://github.com/peoxin/reponest"
readme = "README.md"
keywords = ["tui", "cli", "git", "repository", "project", "management", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
git2 = { version = "0.20.3", default-features = false }
ratatui = "0.29.0"
tokio = { version = "1.42", features = ["full"] }
rayon = "1.10"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports", "async_tokio"] }
tempfile = "3.23.0"

[[bench]]
name = "scanner_bench"
harness = false

[[bench]]
name = "git_ops_bench"
harness = false

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
implicit_clone = "warn"
use_self = "warn"
